--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -24,10 +24,10 @@ jobs:
       - name: Run news fetch script
         run: python fetch_news.py
 
-      - name: Commit & Push changes
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add index.html
-          git commit -m "🔁 Auto-update news"
-          git push
+      - name: Commit and push changes
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git add index.html || true
+        git diff --cached --quiet && echo "No changes to commit" || git commit -m "Auto-update top news"
+        git push || true
