--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -2,29 +2,29 @@ name: Auto Update News
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  # every 12 hours
-  workflow_dispatch:
+    - cron: "0 */12 * * *"  # Every 12 hours
+  workflow_dispatch:        # Allow manual trigger
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.x
 
-      - name: Install requirements
-        run: pip install requests beautifulsoup4
+    - name: Install requests library
+      run: pip install requests
 
-      - name: Run news fetch script
-        run: python fetch_news.py
+    - name: Run news fetch script
+      run: python fetch_news.py
 
-      - name: Commit and push changes
+    - name: Commit and push changes
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
